--- a/app/sass/_icons.sass
+++ b/app/sass/_icons.sass
@@ -4,3 +4,17 @@
 
 .fri-qube-logo
 	+sprite(qube-logo)
+
+.fri-logo
+	+sprite(logo)
+
+.fri-arrow-white
+	+sprite(arrow-white)
+
+.fri-arrow-dark
+	+sprite(arrow-dark)
+
+.top-nav__back
+	&:hover
+		.fri-arrow-dark
+			+sprite(arrow-orange)
