--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,4 @@
+@import url(../css/fonts.css);
 .mb10 {
   margin-bottom: 10px;
 }
@@ -8,8 +9,8 @@
 }
 
 .fri-qube-logo {
-  background-image: url('../images/icons-s1778167d02.png');
-  background-position: 0 0;
+  background-image: url('../images/icons-s0aeb2b1c4e.png');
+  background-position: 0 -136px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -19,12 +20,126 @@
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
   .fri-qube-logo {
-    background-image: url('../images/icons-2x-sf4ea60d45b.png');
-    background-size: 75px auto;
-    background-position: 0 0;
+    background-image: url('../images/icons-2x-s07c654e3fd.png');
+    background-size: 141px auto;
+    background-position: 0 -68px;
     height: 79px;
     width: 75px;
   }
+}
+
+.fri-logo {
+  background-image: url('../images/icons-s0aeb2b1c4e.png');
+  background-position: 0 -91px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 40px;
+  width: 282px;
+}
+@media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
+  .fri-logo {
+    background-image: url('../images/icons-2x-s07c654e3fd.png');
+    background-size: 141px auto;
+    background-position: 0 -46px;
+    height: 20px;
+    width: 141px;
+  }
+}
+
+.fri-arrow-white {
+  background-image: url('../images/icons-s0aeb2b1c4e.png');
+  background-position: 0 -52px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 34px;
+  width: 68px;
+}
+@media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
+  .fri-arrow-white {
+    background-image: url('../images/icons-2x-s07c654e3fd.png');
+    background-size: 141px auto;
+    background-position: 0 -26px;
+    height: 17px;
+    width: 34px;
+  }
+}
+
+.fri-arrow-dark {
+  background-image: url('../images/icons-s0aeb2b1c4e.png');
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 21px;
+  width: 42px;
+}
+@media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
+  .fri-arrow-dark {
+    background-image: url('../images/icons-2x-s07c654e3fd.png');
+    background-size: 141px auto;
+    background-position: 0 0;
+    height: 11px;
+    width: 21px;
+  }
+}
+
+.top-nav__back:hover .fri-arrow-dark {
+  background-image: url('../images/icons-s0aeb2b1c4e.png');
+  background-position: 0 -26px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 21px;
+  width: 42px;
+}
+@media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
+  .top-nav__back:hover .fri-arrow-dark {
+    background-image: url('../images/icons-2x-s07c654e3fd.png');
+    background-size: 141px auto;
+    background-position: 0 -13px;
+    height: 11px;
+    width: 21px;
+  }
+}
+
+.top-nav {
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.5);
+  height: 102px;
+  padding: 27px 0 9px;
+}
+
+.top-nav__back {
+  padding-right: 11px;
+  margin-top: -3px;
+  cursor: pointer;
+}
+.top-nav__back:hover .top-nav__back-text {
+  color: #ff6000;
+}
+
+.top-nav__back-icon {
+  margin-bottom: 22px;
+}
+
+.top-nav__back-text {
+  font-size: 15px;
+}
+
+.button__nav {
+  border: 2px solid #000;
+  min-height: 40px;
+  padding: 0 28px;
+}
+.button__nav:hover {
+  color: #fff;
+  background-color: #ff6000;
+  border-color: #ff6000;
 }
 
 html, body {
@@ -32,15 +147,77 @@ html, body {
   height: 100%;
 }
 
-body {
-  box-shadow: inset 0 0 500px;
+* {
+  box-sizing: border-box;
 }
 
-.logo {
-  left: 50%;
-  margin-left: -37.5px;
-  margin-top: -39.5px;
-  position: absolute;
-  top: 50%;
-  font-size: 0;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+body {
+  font-family: "Helvetica Neue";
+  font-weight: 300;
+  font-size: 17px;
+}
+
+.container {
+  max-width: 1050px;
+  width: 100%;
+  padding: 0 20px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.container_header {
+  max-width: 1070px;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.flex {
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.flex-column {
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.flex-item-left {
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.flex-item-right {
+  margin-right: 0;
+  margin-left: auto;
+}
+
+.flex-item-middle {
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.button {
+  font-family: "Bello Pro";
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: normal;
+  font-size: 19px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
 }
