--- a/app/sass/app.sass
+++ b/app/sass/app.sass
@@ -5,9 +5,7 @@ $framework: mb10
 
 @import "icons"
 
+@import "header"
 @import "main"
 
-@import "media-screens/tablet-landscape"
-@import "media-screens/tablet-portatit"
-@import "media-screens/mobile-landscape"
-@import "media-screens/mobile-portatit"
+@import "responsive"
