--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -1,13 +1,7 @@
 {% extends "layouts/app.twig" %}
 
-{% block pageTitle %}Главная страница{% endblock %}
-
-<style>
-    .hello {
-        border: 2px solid #ffaaaa;
-    }
-</style>
+{% block pageTitle %}ВсеТВ{% endblock %}
 
 {% block content %}
-    <div class="logo"><i class="fri fri-qube-logo"></i></div>
+
 {% endblock %}
