--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -1,8 +1,10 @@
 <!--build:js js/vendor.js-->
 <!--bower:js-->
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!--endbower-->
 <!--endbuild-->
 
 <!--build:js js/common.js-->
 <script src="js/app.js"></script>
+<script src="PP/PP.js"></script>
 <!--endbuild-->
