--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -2,6 +2,9 @@
 	box-shadow: 0 3px 12px rgba(0,0,0,0.5)
 	height: 102px
 	padding: 27px 0 9px
+	z-index: 999
+	width: 100%
+	position: relative
 
 .top-nav__back
 	padding-right: 11px
