--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -14,14 +14,29 @@ body
 	font-weight: 300
 	font-size: 17px
 
+.site-wrapper
+	width: 100%
+	position: relative
+	z-index: 10
+	display: flex
+	flex-direction: column
+
+.block
+	position: relative
+	width: 100%
+
 .container
+	position: relative
 	max-width: 1050px
 	width: 100%
 	padding: 0 20px
 	margin: 0 auto
 	height: 100%
 
-.container_header
+.container_910
+	max-width: 910px
+
+.container_1070
 	max-width: 1070px
 	
 .inline-block
@@ -56,3 +71,15 @@ body
 
 .text-center
 	text-align: center
+	
+.circle
+	width: 189px
+	height: 189px
+	margin-top: -108px
+	margin-left: auto
+	margin-right: -103px
+	background-color: #00a8ff
+	border-radius: 50%
+
+.is-overflow-hidden
+	overflow: hidden
