--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -4,4 +4,13 @@
 
 {% block content %}
 
+<div class="block is-overflow-hidden">
+    <div class="circle circle_blue"></div>
+    <div class="container container_910">
+        <div class="rostelecom-logo">
+
+        </div>
+    </div>
+</div>
+
 {% endblock %}
