--- a/app/twig/layouts/app.twig
+++ b/app/twig/layouts/app.twig
@@ -10,19 +10,22 @@
     {% include "stylesheets.twig" %}
 </head>
 <body>
-    <!-- Header block -->
-    {% include "header.twig" %}
-    <!-- Header block end -->
 
-    <!-- Block content -->
-    {% block content %}{% endblock %}
-    <!-- Block content end -->
+    <div class="site-wrapper">
+        <!-- Header block -->
+        {% include "header.twig" %}
+        <!-- Header block end -->
 
-    <!-- Footer block -->
-    {% include "footer.twig" %}
-    <!-- Footer block end -->
+        <!-- Block content -->
+        {% block content %}{% endblock %}
+        <!-- Block content end -->
 
-    <!-- Scripts -->
-    {% include "scripts.twig" %}
+        <!-- Footer block -->
+        {% include "footer.twig" %}
+        <!-- Footer block end -->
+
+        <!-- Scripts -->
+        {% include "scripts.twig" %}
+    </div>
 </body>
 </html>
