--- a/app/twig/layouts/header.twig
+++ b/app/twig/layouts/header.twig
@@ -1,5 +1,5 @@
 <header class="top-nav">
-    <div class="container container_header">
+    <div class="container container_1070">
         <div class="flex">
             <div class="top-nav__logo flex-item-left">
                 <a class="inline-block" href="/"><i class="fri fri-logo"></i></a>
