--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -4,13 +4,59 @@
 
 {% block content %}
 
-<div class="block is-overflow-hidden">
-    <div class="circle circle_blue"></div>
-    <div class="container container_910">
-        <div class="rostelecom-logo">
-
+    <div class="block">
+        <div class="general pt50">
+            <div class="general__circle-blue"></div>
+            <div class="container">
+                <div class="general__circle-big-border-gray"></div>
+                <div class="general__circle-small-border-gray"></div>
+                <div class="general__circle-orange"></div>
+                <div class="general__all-tv"></div>
+                <div class="general__gadget"></div>
+                <div class="general__circle-white-big">
+                    <div class="general__circle-white-medium">
+                        <div class="general__circle-white-small">
+                            <div class="general__logo-66x47"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-910">
+                    <div class="rostelecom-logo text-center mb24">
+                        <i class="fri fri-rostelecom-logo"></i>
+                    </div>
+                    <div class="small-title">Развлекательное мобильное приложение</div>
+                </div>
+            </div>
+        </div>
+        <div class="tasks">
+            <div class="container container_955">
+                <div class="tasks__grid tasks-grid mb50">
+                    <div class="tasks-grid__item tasks-grid__item_w410 tasks-grid-item">
+                        <div class="mb25"><span class="tasks-grid-item__title">Задача</span></div>
+                        <p class="tasks-grid-item__paragraph mb23">Создать приложение для Ростелекома с функционалом просмотра ТВ-программы и бесплатных передач от ВсёТВ.</p>
+                        <p class="tasks-grid-item__paragraph mb50">Реализовать необычную фильтрацию по большому банку фильмов Интерактивного ТВ Ростелеком.</p>
+                        <div class="mb25"><span class="tasks-grid-item__title">Клиент</span></div>
+                        <p class="tasks-grid-item__paragraph mb35">Компания iBecom — разработчик продуктов и решений в области микролокаций и indoor-навигации. <a href="www.espley.ru" target="_blank">www.espley.ru</a></p>
+                    </div>
+                    <div class="tasks-grid__item tasks-grid__item_w400 tasks-grid-item">
+                        <div class="mb25"><span class="tasks-grid-item__title">Проблематика</span></div><p class="tasks-grid-item__paragraph mb23">В приложении  пользователь должен искать фильмы, передачи не по привычным всем — режиссёру, актеру, году и прочим параметрам, а по настроению.</p>
+                        <p class="tasks-grid-item__paragraph mb7">Что нам хочется сегодня увидеть на экране:</p>
+                        <div class="tasks-hashtags">
+                            <div class="tasks-hashtags__item"><span class="hashtag">#МилыеЖивотные</span></div>
+                            <div class="tasks-hashtags__item"><span class="hashtag">#Спорт</span></div>
+                            <div class="tasks-hashtags__item"><span class="hashtag is-filled">#НеДляВсех</span></div>
+                            <div class="tasks-hashtags__item"><span class="hashtag">#СноваНаУчебу</span></div>
+                            <div class="tasks-hashtags__item"><span class="hashtag">#Авторазбор</span></div>
+                            <div class="tasks-hashtags__item"><span class="hashtag hashtag_dots">&middot;&middot;&middot;</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="centered general__logo mb23"></div>
+                <div class="small-title fz38">Собственный инфо канал интерактивного ТВ.</div>
+            </div>
         </div>
     </div>
-</div>
+
+
 
 {% endblock %}
